Agregar notebook de visualizacion escalar

--- a/notebooks/01_colormaps.ipynb
+++ b/notebooks/01_colormaps.ipynb
@@ -66,6 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Este comando mágico permite tener gráficos interactivos en Jupyterlab\n",
+    "# para que funcione requiere la instalación de ipympl\n",
     "%matplotlib widget"
    ]
   },
